@@ -7,17 +7,24 @@ DIST appliance-1.24.8.tar.xz 68687024 SHA256 dfd113257b8416a52211ccc250b19008283
 DIST appliance-1.26.0.tar.xz 94753208 SHA256 446e8f0cfb24977843049984879d471760a1f56dd9f891f2a66c16827c7dfbcf SHA512 5d493ed6e8601dde8d5a45debfee71696b96a36d0f69d428388a6f2a2d49e12c0a66bcee210fe606fc9b2b41cb42d0d2a9f5d12425f2b234423194b2609f081f WHIRLPOOL 18cb09b44ce568e4270e574fffe7ffd935c4d64564abaae66c3d70202db9df75b013a0ed8add639ac13ea4ebd0ec9d74645a774d2e969686c8bc0d616587f625
 EBUILD libguestfs-appliance-1.20.0.ebuild 818 SHA256 11dd569d8987f3fa967613db65b50154248dd5ad414d12d68e5c71821fef2003 SHA512 30f640516cb48b047f73f5b990f7cb369378856bc70bc87af2b951f1cd3c0514e7cc134c402d450a53fc277995beed6ca6aa68f1d437ff2a0275a0fd2ae1014d WHIRLPOOL 51556dc36f9764edf0fc9c4df5e406a76a2c1b52a6911b7c04097973335e15c5ee962ce63a779105f946e1ee441a042d6bb9223678ad18248a6b2b749bdf3c4d
 EBUILD libguestfs-appliance-1.24.8.ebuild 740 SHA256 10e0903811cfc607f6f23543f7bc2ac5644e5f8c2123b9cddf0f9b26e8d4b389 SHA512 1190b114bedc77e9727a83c95fa57a22020418fe591c7ae6dfeaff28875b392047e692b1b2beeaae976790a0ea944a0e15200ab55d78396d297e618a147a42e1 WHIRLPOOL 11df4999741257605efc0dae4772c021e9553599ceca37c586cbf2c4e9edad4fb2467874ae49ebac5b4e304fa3b378deda7f31fd9a34aaddfd26b93512e954e7
+EBUILD libguestfs-appliance-1.26.0-r1.ebuild 1094 SHA256 80d32fc6a330c874c54e09c85c65524d1992de96197bc331e40e77cf2e7a606a SHA512 c4988826ce3635804ff8203d187a21343b47949c18e2b5fbbd6ce8dead530bab6a284c0e222af005f66cb0355b6c765c381208d273b3708e3bfc49de156424c9 WHIRLPOOL c03047d6b24ed221fbe4a3bcf13e165fbbbc92b8b6a4b3827384e70a18a2b83cea3d34471ee19347ea0a0b9915170496dec1441e341ceb182a6263aa6c478d97
 EBUILD libguestfs-appliance-1.26.0.ebuild 740 SHA256 5db100ac6c61d6a5afb1a53fa4957d63e563caf12a2282a2372e7f9ebd2a2187 SHA512 12f148ee5b8f77495be623eb70ca1097b2bfd48c976242ab5b06cc7917043a62665e6c1888568b2792322d0ccdc6f96c9a1407f03557923ffcf60373ba3f2535 WHIRLPOOL 21a476eef176a98f1ecc1ffc62f0a805d090c58d172cdfd7246b653c15c55142390f99f0caad2712f2a405a3e977ed4ab00d35cd791d83e354d5e420495df013
-MISC ChangeLog 716 SHA256 d9ca886a64c8ad1b0fc6b577e292dc4b15fc85628559367eb8b99d18bbeed7c7 SHA512 28a7309ee8d85b7e758066130b8de77ea11534979e1a869de951ce5948209e1e096bc8b874994e1883ab378083326e8e3b07b47f44eb78ed59d4565ad2656f68 WHIRLPOOL 3fc6817efbe6cfb24a4cebfe988af4b08ae81280d220380b7cc454edf60af08d2b6d6fb729398fafcc9afd4053888f216aa6c19bd57cd80837260057f54f065a
+MISC ChangeLog 984 SHA256 39136d680dc9c7c3a68d83d0e7ad2fd0f3183c7a8e060a3f1d45874a0b1cba7e SHA512 f017372400f0cfdc4f530ef62af4ea2c90ab138f521c22f7bdb502aa9a0f1de16270d8964c5642f7dfea04ea52f52ca73bfe7f6f43ee977709e8a0b65072778f WHIRLPOOL fa33ea51f1a749825ab2e252ead7176c00dbd89cb50370dabf4f319917f0a29e8daf9da73e9e1c007ac8d5623a28601f93adf796de035e73415d38cd436bd1a0
 MISC metadata.xml 537 SHA256 f9e668a9a9da60217a73af940110a723db2ab42a123e80bc259a2ee16fb0b9ee SHA512 991552b44293f77c7a8d9895dc00048a0d802ca8f13a641ce01fc30b5f51d54237f091af748c9ea4e99031d0c2535fb96d47a7774e1f2b85e4064607a37108c3 WHIRLPOOL edb84600c340c9050fb0d4798dfce078c09e38f1ccc7ec06c7317b5c0cd48893f8b93f2b6bfdc23dd29d949dd1c1c88d0d7a1fd007658148e7de8ffdf1ea7575
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTYqcCAAoJEAmJmMX429reqlAH/jJuWxRQ9IrFm28yXVmxmGeh
-hoOVrsaCw+HWxBLELSm7HjX68KkWExfQA4xdSq8TEsJu5Pq4HBBuJuZXh6tYFlL+
-QKSnZCSKWCWxiyK+l1NP6A9OaoQCKlPgUP0yGL+3merRZiH57/+h22GPAXLjsAYE
-B9rZxkOdeTCcWXOTov4s7h4armMKrXljw9whj+ni9vsunWTY1KAjn84uLEHzf2ND
-bd48MmmBu+w7t3MIyznwatVaT7bJBgDyVOqgwiptic5JiPydpRy+BvUXwIh0t+zs
-qL7PHPSYLaYMfMk7lqkrRuDkEe2t4Hzd3G0phhi5oKf2U2q/VnjFKKo+V79AcPo=
-=LG9p
+iQIcBAEBCAAGBQJUXnuAAAoJEPGu1DbS6WIAnEQQAI+8Um3vOkxJFd+NXrXptq7m
+cf4T2zxFVt4euyU0aawfBeNot0hUoAuDxIzDuExaN9esVIzJLICBcGNKfuN1MBv+
+Xn4AWqSUUtw3f7bJ/7taY6xXcCSbli41uJpG5tn2poGTU4GJJlzevRBe6IFGEARG
+6ypyjvWzN+8G9sSPJyiD7xYbMU7ntNP+KHRge/zEP66TnTwXN6qtjcal4HzxS5kJ
+nJoCXqcReKpjL2IXl7mw6riE8AH76VEaRNs8NhzXSzycaDg+AWLisjDP3aegoSpf
+i+xkMurxpegeDPVlwJWhGYHm2+jDlXYvmfN5hISjnzq5qims6Sy21jb+L5quT1L+
+xrT/ws1/wVA1TvCBlHdTQYZ85Wp5muXB+p2V6iz4YAFGHz1UAAe7Pv3vOa/FB84z
+CK+G/K1jq1favxP6m5iK+OgsQwIB0hKxs2/FYPurNuMbqJJQGSVyVqC3wOv8c64L
+gg44Gln0b8qJxp9TpvyHYCPuS2k12U1KG05hVcxq6p13Led3Bu4ofYMpn8jnS+UP
+UJ3bmAwQbwQNzTFbFo4Xyjyl88oF5ige9U9rKiPldHGOvBNG7pEFrHitDalfDSqV
+DNwNrVS7Uz31dCXowqD0mdB9r6SE1bawHU+CU0lB9uTWpYZ7+ajzgHMpRaJ9P0lw
+cnGFeZ9/FCjmowyh0sPS
+=bmPF
 -----END PGP SIGNATURE-----
